# dxc-pfe

./: .gitignore  README.md  pyproject.toml
dxc_recruitment_pfe/: __init__.py
dxc_recruitment_pfe/core/: __init__.py
dxc_recruitment_pfe/cv_parser/: __init__.py
dxc_recruitment_pfe/job_matching/: __init__.py
dxc_recruitment_pfe/ner_model/: __init__.py
dxc_recruitment_pfe/question_generation/: __init__.py
