[tool.poetry]
name = "dxc-recruitment-pfe"
version = "0.1.0"
description = "PFE Project for DXC Recruitment Automation"
authors = ["Youssef EL MOUNABIH <your_email@example.com>"] # Please update with your email
readme = "README.md"
packages = [{include = "dxc_recruitment_pfe"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
python-dotenv = "^1.0.0"
spacy = {extras = ["transformers", "lookups"], version = "^3.7.2"}
# torch will be installed by spacy[transformers]. If issues arise, specify a compatible version.
# e.g., torch = ">=1.13.1,<2.2.0"
# cupy-cudaXXX can be added if a specific CUDA version is targeted for GPU
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
optuna = "^3.4.0"
shap = "^0.43.0"
mlflow = "^2.8.0"
pymupdf = "^1.23.6"
requests = "^2.31.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6" # For FastAPI file uploads

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1"
black = "^23.11.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
